# websites-wpieterse-me

./: .bazelrc  .gitignore  .gitlab-ci.yml  MODULE.bazel
websites/wpieterse_me/: config.toml
websites/wpieterse_me/content/: about.md  contact.md  projects.md  resume.md
websites/wpieterse_me/infrastructure/: Program.cs  Pulumi.core.yaml  Pulumi.yaml  Websites.WynandPieterse.Infrastructure.csproj
websites/wpieterse_me/themes/hugo-coder/layouts/partials/: head.html
websites/wpieterse_me/themes/hugo-coder/layouts/partials/home/: avatar.html
